DEV/src/objects/Worker__c.object
<CustomObject>
    <fields>
        <fullName>City_town__c</fullName>
        <label>City/town</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hire_date__c</fullName>
        <label>Hire date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hire_reson__c</fullName>
        <label>Hire reson</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Leave_date__c</fullName>
        <label>Leave date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Role__c</fullName>
        <label>Resource Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Street_address__c</fullName>
        <label>Street address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Worker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Worker_ID__c</fullName>
        <displayFormat>SK{000000}</displayFormat>
        <label>Worker ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Worker_type__c</fullName>
        <label>Worker type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Permanent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Worker</relationshipLabel>
        <relationshipName>Worker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>last_Name__c</fullName>
        <label>last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>manager</label>
        <referenceTo>Worker__c</referenceTo>
        <relationshipLabel>Worker</relationshipLabel>
        <relationshipName>Worker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>postal_zip_code__c</fullName>
        <label>postal/zip code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>state</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>worker_status__c</fullName>
        <label>worker status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Worker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Worker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Worker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>